--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>binance-connector-java</artifactId>
             <version>1.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
